--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
     <footer id="contacto">
         <div class="contenedor">
             <h2 class="titulo">Contactenos</h2>
-            <form action="" class="form">
-                <input class="input"  type="text" name="" id="" placeholder="Nombre">
-                <input class="input"  type="email" name="" id="" placeholder="Email">
-                <textarea  class="input" name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+            <form action="https://formspree.io/f/mnqyybdb" method="POST" class="form">
+                <input class="input"  type="text" name="nombre" id="nombre" placeholder="Nombre">
+                <input class="input"  type="email" name="email" id="email" placeholder="Email">
+                <textarea class="input" name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Mensaje"></textarea>
                 <input class="input"  type="submit" value="Enviar">
             </form>
         </div>
