Se realizo correccion en la seccion de informacion

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="info">
         <div class="contenedor">
             <h2 class="titulo left">Juntos podemos apoyar</h2>
-            <p>Inovando con tecnología de punta juntos podemos alcanzar la productividad de de las empresas</p>
+            <p>Inovando con tecnología de punta juntos podemos alcanzar la productividad de las empresas</p>
         </div>
     </section>
 
